<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        tools:context=".MainHotels">

        <TextView
            android:id="@+id/titol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titol_hotel"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:entries="@array/spinner_array" />

        <androidx.cardview.widget.CardView
            android:id="@+id/primer_h"
            style="@style/cardViewStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/img_fonda"
                    style="@style/imgStyle"
                    android:src="@drawable/fonda" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/primer_Hotel"
                            style="@style/titleStyle"
                            android:text="@string/titol1_hotel"/>
                        <TextView
                            android:id="@+id/hdesc1"
                            style="@style/descriptionStyle"
                            android:text="@string/hdesc1" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RatingBar
                            android:id="@+id/hrat1"
                            style="@style/ratingStyle"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <Button
                                android:id="@+id/trucar1"
                                style="@style/buttonStyle"
                                android:text="@string/telf" />
                            <Button
                                android:id="@+id/web1"
                                style="@style/buttonStyle"
                                android:text="@string/web" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/segon_h"
            style="@style/cardViewStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/img_granollers"
                    style="@style/imgStyle"
                    android:src="@drawable/granollers" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/segon_Hotel"
                            style="@style/titleStyle"
                            android:text="@string/titol2_hotel"/>
                        <TextView
                            android:id="@+id/hdesc2"
                            style="@style/descriptionStyle"
                            android:text="@string/hdesc2" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RatingBar
                            android:id="@+id/hrat2"
                            style="@style/ratingStyle"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <Button
                                android:id="@+id/trucar2"
                                style="@style/buttonStyle"
                                android:text="@string/telf" />
                            <Button
                                android:id="@+id/web2"
                                style="@style/buttonStyle"
                                android:text="@string/web" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/tercer_h"
            style="@style/cardViewStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/img_iris"
                    style="@style/imgStyle"
                    android:src="@drawable/iris" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tercer_Hotel"
                            style="@style/titleStyle"
                            android:text="@string/titol3_hotel"/>
                        <TextView
                            android:id="@+id/hdesc3"
                            style="@style/descriptionStyle"
                            android:text="@string/hdesc3" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RatingBar
                            android:id="@+id/hrat3"
                            style="@style/ratingStyle"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <Button
                                android:id="@+id/trucar3"
                                style="@style/buttonStyle"
                                android:text="@string/telf" />
                            <Button
                                android:id="@+id/web3"
                                style="@style/buttonStyle"
                                android:text="@string/web" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/quart_h"
            style="@style/cardViewStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/img_bib"
                    style="@style/imgStyle"
                    android:src="@drawable/bib" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/quart_Hotel"
                            style="@style/titleStyle"
                            android:text="@string/titol4_hotel"/>
                        <TextView
                            android:id="@+id/hdesc4"
                            style="@style/descriptionStyle"
                            android:text="@string/hdesc4" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RatingBar
                            android:id="@+id/hrat4"
                            style="@style/ratingStyle"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <Button
                                android:id="@+id/trucar4"
                                style="@style/buttonStyle"
                                android:text="@string/telf" />
                            <Button
                                android:id="@+id/web4"
                                style="@style/buttonStyle"
                                android:text="@string/web" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cinque_h"
            style="@style/cardViewStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/img_atenea"
                    style="@style/imgStyle"
                    android:src="@drawable/atenea" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/cinque_Hotel"
                            style="@style/titleStyle"
                            android:text="@string/titol5_hotel"/>
                        <TextView
                            android:id="@+id/hdesc5"
                            style="@style/descriptionStyle"
                            android:text="@string/hdesc5" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RatingBar
                            android:id="@+id/hrat5"
                            style="@style/ratingStyle"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <Button
                                android:id="@+id/trucar5"
                                style="@style/buttonStyle"
                                android:text="@string/telf" />
                            <Button
                                android:id="@+id/web5"
                                style="@style/buttonStyle"
                                android:text="@string/web" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/sise_h"
            style="@style/cardViewStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/img_h"
                    style="@style/imgStyle"
                    android:src="@drawable/hotelh" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/sise_Hotel"
                            style="@style/titleStyle"
                            android:text="@string/titol6_hotel"/>
                        <TextView
                            android:id="@+id/hdesc6"
                            style="@style/descriptionStyle"
                            android:text="@string/hdesc6" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RatingBar
                            android:id="@+id/hrat6"
                            style="@style/ratingStyle"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <Button
                                android:id="@+id/trucar6"
                                style="@style/buttonStyle"
                                android:text="@string/telf" />
                            <Button
                                android:id="@+id/web6"
                                style="@style/buttonStyle"
                                android:text="@string/web" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/sete_h"
            style="@style/cardViewStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/img_ciutat"
                    style="@style/imgStyle"
                    android:src="@drawable/ciutat" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/sete_Hotel"
                            style="@style/titleStyle"
                            android:text="@string/titol7_hotel"/>
                        <TextView
                            android:id="@+id/hdesc7"
                            style="@style/descriptionStyle"
                            android:text="@string/hdesc7" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <RatingBar
                            android:id="@+id/hrat7"
                            style="@style/ratingStyle"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <Button
                                android:id="@+id/trucar7"
                                style="@style/buttonStyle"
                                android:text="@string/telf" />
                            <Button
                                android:id="@+id/web7"
                                style="@style/buttonStyle"
                                android:text="@string/web" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>