<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainHotels">

    <TextView
        android:id="@+id/titol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/titol_hotel"
        android:textSize="50sp" />
<!--<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titol"
        android:id="@+id/primer_relative">

        <TextView
            android:id="@+id/primer_Hotel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/titol1_hotel"
            android:textSize="25sp"/>
        <ImageView
            android:id="@+id/img_fonda"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/fonda"
            android:layout_toStartOf="@id/primer_Hotel"/>
        <Button
            android:id="@+id/trucar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telf"
            android:layout_below="@id/primer_Hotel"
            android:layout_toEndOf="@id/img_fonda"/>
        <Button
            android:id="@+id/web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web"
            android:layout_below="@id/primer_Hotel"
            android:layout_toEndOf="@id/trucar"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/segon_relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/primer_relative">

        <TextView
            android:id="@+id/segon_Hotel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            android:text="@string/titol2_hotel"
            android:textSize="25sp"/>
        <ImageView
            android:id="@+id/img_granollers"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/granollers"
            android:layout_toStartOf="@id/segon_Hotel"/>
        <Button
            android:id="@+id/trucar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telf"
            android:layout_below="@id/segon_Hotel"
            android:layout_toEndOf="@id/img_granollers"/>
        <Button
            android:id="@+id/web1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web"
            android:layout_below="@id/segon_Hotel"
            android:layout_toEndOf="@id/trucar1"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/tercer_relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/segon_relative">

        <TextView
            android:id="@+id/tercer_Hotel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="85dp"
            android:text="@string/titol3_hotel"
            android:textSize="25sp"/>
        <ImageView
            android:id="@+id/img_iris"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/iris"
            android:layout_toStartOf="@id/tercer_Hotel"/>
        <Button
            android:id="@+id/trucar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telf"
            android:layout_below="@id/tercer_Hotel"
            android:layout_toEndOf="@id/img_iris"/>
        <Button
            android:id="@+id/web2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web"
            android:layout_below="@id/tercer_Hotel"
            android:layout_toEndOf="@id/trucar2"/>
    </RelativeLayout><RelativeLayout
        android:id="@+id/quart_relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tercer_relative">

        <TextView
            android:id="@+id/quart_Hotel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="70dp"
            android:text="@string/titol4_hotel"
            android:textSize="25sp"/>
        <ImageView
            android:id="@+id/img_bib"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/bib"
            android:layout_toStartOf="@id/quart_Hotel"/>
        <Button
            android:id="@+id/trucar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telf"
            android:layout_below="@id/quart_Hotel"
            android:layout_toEndOf="@id/img_bib"/>
        <Button
            android:id="@+id/web3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web"
            android:layout_below="@id/quart_Hotel"
            android:layout_toEndOf="@id/trucar3"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/cinque_relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quart_relative">

        <TextView
            android:id="@+id/cinque_Hotel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:text="@string/titol5_hotel"
            android:textSize="25sp"/>
        <ImageView
            android:id="@+id/img_atenea"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/atenea"
            android:layout_toStartOf="@id/cinque_Hotel"/>
        <Button
            android:id="@+id/trucar4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telf"
            android:layout_below="@id/cinque_Hotel"
            android:layout_toEndOf="@id/img_atenea"/>
        <Button
            android:id="@+id/web4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web"
            android:layout_below="@id/cinque_Hotel"
            android:layout_toEndOf="@id/trucar4"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/sise_relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cinque_relative">

        <TextView
            android:id="@+id/sise_Hotel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="100dp"
            android:text="@string/titol6_hotel"
            android:textSize="25sp"/>
        <ImageView
            android:id="@+id/img_h"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/hotelh"
            android:layout_toStartOf="@id/sise_Hotel"/>
        <Button
            android:id="@+id/trucar5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telf"
            android:layout_below="@id/sise_Hotel"
            android:layout_toEndOf="@id/img_h"/>
        <Button
            android:id="@+id/web5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web"
            android:layout_below="@id/sise_Hotel"
            android:layout_toEndOf="@id/trucar5"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/sete_relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sise_relative">

        <TextView
            android:id="@+id/sete_Hotel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:text="@string/titol7_hotel"
            android:textSize="25sp"/>
        <ImageView
            android:id="@+id/img_ciutat"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ciutat"
            android:layout_toStartOf="@id/sete_Hotel"/>
        <Button
            android:id="@+id/trucar6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telf"
            android:layout_below="@id/sete_Hotel"
            android:layout_toEndOf="@id/img_ciutat"/>
        <Button
            android:id="@+id/web6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web"
            android:layout_below="@id/sete_Hotel"
            android:layout_toEndOf="@id/trucar6"/>
    </RelativeLayout>
</RelativeLayout>
</ScrollView>